dapp: fix alignment issues
Without this patch, we won't have user intuitive approach on some ui elements being positioned wrongly.

This is a problem because we need to reposition some elements and fix alignments.

This patch fixes this issue with few additional css tweaks.

--- a/dapp/src/components/BalanceCard/styles.scss
+++ b/dapp/src/components/BalanceCard/styles.scss
@@ -8,7 +8,7 @@ $balance-card-background: rgba(99, 114, 136, 0.2);
         border: 1px solid transparent;
         border-radius: 8px !important;
         box-sizing: border-box;
-        margin-bottom: 55px !important;
+        margin-bottom: 25px !important;
         mix-blend-mode: normal;
         backdrop-filter: blur(50px);
         padding: 16px 16px 24px;
