--- a/dapp/src/components/NetworkButton/styles.scss
+++ b/dapp/src/components/NetworkButton/styles.scss
@@ -26,7 +26,7 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        padding-left: 30px;
+        padding-left: 15px;
         padding-right: 0;
 
         &.single {
@@ -40,13 +40,13 @@
         }
 
         .network-name {
-            padding-left: 20px;
+            padding-left: 5px;
             color: $white;
         }
     }
 
     label {
-        top: 5px !important;
+        top: 3px !important;
         transition: none !important;
         transform: none !important;
         overflow: initial;
@@ -113,7 +113,7 @@
 }
 
 .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiMenu-paper {
-    background: $switch-back;
+    background: $dropdown-background;
     top: 82px !important;
     border: 1px solid $dropdown-border-color;
     min-width: 200px !important;
