--- a/dapp/src/components/StakeTab/styles.scss
+++ b/dapp/src/components/StakeTab/styles.scss
@@ -19,6 +19,10 @@ $staking-input-max-button-color: #ffdfbd;
         mix-blend-mode: normal;
         backdrop-filter: blur(45px);
         margin: 32px 0 42px 0;
+
+        .staking-info-card-content {
+            padding: 12px 16px;
+        }
     }
 
     .buttons-holder {
@@ -56,8 +60,7 @@ $staking-input-max-button-color: #ffdfbd;
         text-align: start;
         border: none;
         background: transparent;
-        padding: 5px 16px;
-        margin: 20px 0;
+        padding: 0 16px;
 
         .staking-info-title {
             font-weight: 800 !important;
